syntax = "proto3";

package pb;

service Scheduler{
  rpc Create(CreateInfo) returns (CreateResponse) {}
  rpc ReadOnly(ReadOnlyInfo) returns (ReadOnlyResponse) {}
  rpc ListClusterInfo(ListInfo) returns (ListResponse) {}
}

message CreateInfo {
  string name = 1;
}

message CreateResponse {
}

message ReadOnlyInfo {
  string name = 1;
}

message ReadOnlyResponse {
}

message ListInfo {
  repeated string names = 1;
}

message ListResponse {
  repeated ClusterInfo info = 1;
}

message ClusterInfo {
  string name = 1;
  string leader = 2;
  repeated NodeInfo nodes = 3;
}

message NodeInfo {
  string URI = 1;
}
