syntax = "proto3";

package pb;

service Node{
  rpc Write(stream WriteDataPacket) returns (WriteResponse)  {}
  rpc Read(BufferInfo) returns (stream ReadDataPacket) {}
  rpc ListClusters(ListClustersInfo) returns (ListClustersResponse) {}
}

message BufferInfo{
  string name = 1;
  uint64 startIndex = 2;
  bool startFromEnd = 3;
}

message WriteDataPacket {
  string name = 1;
  bytes message = 2;
}

message ReadDataPacket {
  bytes message = 1;
  uint64 index = 2;
}

message WriteResponse {
  uint64 lastWriteIndex = 1;
  string error = 2;
}

message InfoResponse {
  string uri = 1;
}

message ListClustersInfo {
}

message ListClustersResponse {
  repeated string names = 1;
}
